--- a/ubiquitous-journey/values-tooling.yaml
+++ b/ubiquitous-journey/values-tooling.yaml
@@ -9,213 +9,9 @@ staging_namespace: &stage "labs-staging"
 
 # App of applications list
 applications:
-  # Bootstrap Project
-  - name: bootstrap
-    enabled: true
-    source: https://redhat-cop.github.io/helm-charts
-    chart_name: bootstrap-project
-    source_ref: "1.0.1"
-    values:
-      bindings: &binds # this labs-devs is the GROUP NAME in IDM
-        - name: labs-devs
-          kind: Group
-          role: edit
-        # this labs-admins is the GROUP NAME in IDM
-        - name: labs-admins
-          kind: Group
-          role: admin
-        - name: jenkins
-          kind: ServiceAccount
-          role: admin
-          namespace: *ci_cd
-      namespaces:
-        - name: *ci_cd
-          bindings: *binds
-          operatorgroup: false
-        - name: *dev
-          bindings: *binds
-          operatorgroup: true
-        - name: *test
-          bindings: *binds
-          operatorgroup: true
-        - name: *stage
-          bindings: *binds
-          operatorgroup: true
-        # optional extra namespaces for cluster ops and PM tools
-        - name: *pm
-          bindings: *binds
-          operatorgroup: false
-        - name: *ops
-          bindings: *binds
-          operatorgroup: false
 
   # Jenkins
-  - name: jenkins
+  - name: istio-base
     enabled: true
-    source: https://github.com/redhat-cop/helm-charts.git
-    source_path: charts/jenkins
-    source_ref: "jenkins-1.0.7"
-    values:
-      persistence: false
-      source_secrets:
-        - name: nexus-password
-          username: admin
-          password: admin123
-
-  # Nexus
-  - name: nexus
-    enabled: true
-    source: https://redhat-cop.github.io/helm-charts
-    chart_name: sonatype-nexus
-    source_ref: "1.1.4"
-    values:
-      service:
-        name: nexus
-
-  # Sealed Secrets Controller
-  # Note you can only have one of these per cluster so be careful 
-  - name: sealed-secrets-controller
-    enabled: true
-    chart_name: sealed-secrets
-    source: https://bitnami-labs.github.io/sealed-secrets
-    source_ref: "2.1.6"
-    values:
-      nameOverride: sealed-secrets
-      fullnameOverride: sealed-secrets
-      # namespace must exist, so we use labs-ci-cd by default.
-      namespace: *ci_cd
-      # Dont touch the security context values, deployment will fail in OpenShift otherwise.
-      podSecurityContext:
-        fsGroup:
-      containerSecurityContext:
-        runAsUser:
-      commandArgs:
-        - "--update-status=true"
-
-
-  # Sealed Secrets
-  # example of an actual secret ...
-  - name: sealed-secrets
-    enabled: false
-    source: https://redhat-cop.github.io/helm-charts
-    chart_name: helper-sealed-secrets
-    source_ref: "1.0.3"
-    values:
-      secrets:
-        # Additional secrets can be appended to this list. See the docs for generating the Sealed Secret
-        - name: git-auth
-          type: kubernetes.io/basic-auth
-          annotations:
-            tekton.dev/git-0: https://<GIT_SERVER>
-          labels:
-            credential.sync.jenkins.openshift.io: "true"
-          data:
-            username: <YOUR_SEALED_SECRET_USERNAME>
-            password: <YOUR_SEALED_SECRET_PASSWORD>
-  
-  # Sonarqube
-  - name: sonarqube
-    enabled: true
-    source: https://redhat-cop.github.io/helm-charts
-    chart_name: sonarqube
-    source_ref: "0.1.0"
-    values:
-      # if integrating into an existing sealed secret or other cluster secret 
-      # account:
-      #   existingSecret: sonarqube-auth
-      initContainers: true
-      plugins:
-        install:
-          - https://github.com/checkstyle/sonar-checkstyle/releases/download/8.40/checkstyle-sonar-plugin-8.40.jar
-          - https://github.com/dependency-check/dependency-check-sonar-plugin/releases/download/2.0.8/sonar-dependency-check-plugin-2.0.8.jar
-
-
-  # CodeReady Workspaces
-  - name: crw
-    enabled: true
-    destination: crw
-    source: https://github.com/rht-labs/refactored-adventure
-    source_path: crw/base
-    source_ref: master
-
-  # Allure
-
-  # Zalenium
-  - name: zalenium
-    enabled: true
-    source: https://github.com/zalando/zalenium.git
-    source_path: charts/zalenium
-    source_ref: "master"
-    values:
-      hub:
-        serviceType: ClusterIP
-        openshift:
-          deploymentConfig:
-            enabled: true
-          route:
-            enabled: true
-            tls:
-              termination: edge
-              insecureEdgeTerminationPolicy: Redirect
-        persistence:
-          enabled: false
-        serviceAccount:
-          create: false
-        desiredContainers: 0
-        podAnnotations:
-          app: zalenium
-
-  # Pact-broker
-  - name: pact-broker
-    enabled: true
-    source: https://redhat-cop.github.io/helm-charts
-    source_ref: "0.0.8"
-    values:
-      # update the passwords :)
- 
-   # Hoverfly
-  - name: hoverfly
-    enabled: true
-    source: https://github.com/helm/charts.git
-    source_path: incubator/hoverfly
-    source_ref: "master"
-    values:
-      image:
-        tag: v1.3.3
-      openshift:
-        route:
-          admin:
-            enabled: true
-            hostname: ''
-          proxy:
-            enabled: true
-            hostname: ''
-
-###########################################
-#  🐌 Apps here are disabled by default 🐌 #
-###########################################
-
-  # Microcks
-  - name: microcks
-    enabled: false
-    destination: microcks
-    source: https://github.com/rht-labs/refactored-adventure
-    source_path: microcks/base
-    source_ref: master
-
-  # Pelorus-operators
-  - name: pelorus-operators
-    enabled: false
-    source: https://github.com/konveyor/pelorus.git
-    source_path: charts/operators
-    source_ref: master
-
-  # Pelorus
-  - name: pelorus
-    enabled: false
-    source: https://github.com/konveyor/pelorus.git
-    source_path: charts/pelorus
-    source_ref: master
-    values:
-      openshift_prometheus_htpasswd_auth: internal:{SHA}TIYUhgUHdhYp1zfn3WRbwAxr478=
-      openshift_prometheus_basic_auth_pass: thisisdefinitelynotmypassword
+    source: https://github.com/paas2/istio.git
+    source_path: helm-charts/base
