--- a/ubiquitous-journey/values-tooling.yaml
+++ b/ubiquitous-journey/values-tooling.yaml
@@ -15,3 +15,4 @@ applications:
     enabled: true
     source: https://github.com/paas2/istio.git
     source_path: helm-charts/base
+    destination: istio-system
